# vibe-epigenetic-age-backend

./: .gitignore  .pdm-python  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  endpoints.py
backend/app/core/: analysis.py
backend/app/models/: sample.py
backend/app/schemas/: sample.py
backend/data/: biolearn.db
data/metadata/: 405ca1c4-3f0f-4bf2-8065-63917bf060b1.json  72b92d92-8bda-4015-8696-119f2410fc61.json  8b519378-abdb-44ee-a023-f691f86675be.json  99a14167-8d88-40cb-9c21-074e200e9682.json  eb486766-accb-4e09-9377-62a6890ca71e.json
scripts/: extract_first_column.py
